# mangalib

./: *.env  .gitignore  catalog_views.py  pyproject.toml
Admin/: Classes.py
Admin_ka/: Classes.py
Auth/: crud.py  depend.py  exceptions.py  jwt_token.py  main.py
Catalog/: __init__.py  catalog_views.py  crud.py  schemas.py
Comment/: comment_views.py  crud.py  schemas.py
Core/: BaseDAO.py  __init__.py  config.py  parsing.py  test.py
Core/Models/: Base.py  comment.py  lists.py  manga.py  page.py  ratings.py  review.py  user.py
Main/: main.py
Manga/: __init__.py  crud.py  manga_views.py  schemas.py
Review/: crud.py  review_views.py  schemas.py
User/: crud.py  schemas.py  user_views.py
front/: package-lock.json  package.json
front/src/: App.js  profile.html
frontend/: index.html  main1.js
frontend/css/: style.css
migrations/: env.py
migrations/versions/: 08fd5bbe7474_author.py  0b8beca9ac3e_.py  275c64418f52_catalog_5_0.py  4b89a5e11e0e_new_dbs.py  64df537bbea8_smth.py  75f1bcd73941_comments_reviews.py  93ed8f7fb126_int_pic.py  98f261ecc5dd_new_db_4_0.py  9b71faa11bcf_initial_migration.py  b40373ba268f_second_test.py  b87f66b4bb63_add_mangas_pages_reviews_users.py  c2198f8264e2_mangas1.py  c75898099e14_new_dbs_2_0.py  cebfdee39dc7_10000_mangs.py  d9c911a67a62_the_most_important_migration.py  e5e1645f7b1e_mangas11.py  e805b8d1d0e2_first_test.py  ef3156d69c04_more_and_more.py  f448c9999fa5_nullable.py  fc2038829457_comments_reviews_2_0.py  fc8d303908a4_db_array.py
static/: catalog.html  index.html  main1.js  manga.html  manga.js
(+40 files in other folders)
